--- a/Fullcode_ML_additional_Project.ipynb
+++ b/Fullcode_ML_additional_Project.ipynb
@@ -3,16 +3,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/EvagAIML/AIML/blob/main/Fullcode_ML_additional_Project.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "3SntBY974rqJ"
       },
       "source": [
@@ -6256,12 +6246,12 @@
         "print(df.isnull().sum())"
       ],
       "metadata": {
-        "id": "VE1pAOwjMnGs",
-        "outputId": "f285e91b-4e6b-448d-b746-b1a1cc1a572a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "id": "VE1pAOwjMnGs",
+        "outputId": "f285e91b-4e6b-448d-b746-b1a1cc1a572a"
       },
       "execution_count": 9,
       "outputs": [
@@ -7494,12 +7484,124 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {
-        "id": "zUi6E9EUMKth"
+        "id": "zUi6E9EUMKth",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "323492f1-a52f-42cc-bea5-d52627b38b1d"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Missing value percentage by column:\n",
+            " id                       0.000000\n",
+            "room_type                0.006747\n",
+            "accommodates             0.004048\n",
+            "bathrooms                0.273913\n",
+            "cancellation_policy      0.010795\n",
+            "cleaning_fee             0.005397\n",
+            "instant_bookable         0.000000\n",
+            "review_scores_rating    22.563452\n",
+            "bedrooms                 0.124138\n",
+            "beds                     0.176762\n",
+            "log_price                0.000000\n",
+            "dtype: float64\n",
+            "Final dataset shape: (51937, 11)\n",
+            "\n",
+            "Any remaining missing values:\n",
+            "id                      0\n",
+            "room_type               0\n",
+            "accommodates            0\n",
+            "bathrooms               0\n",
+            "cancellation_policy     0\n",
+            "cleaning_fee            0\n",
+            "instant_bookable        0\n",
+            "review_scores_rating    0\n",
+            "bedrooms                0\n",
+            "beds                    0\n",
+            "log_price               0\n",
+            "dtype: int64\n"
+          ]
+        }
+      ],
+      "source": [
+        "# 1. Handling missing values\n",
+        "\n",
+        "# Check % missing\n",
+        "missing_percent = df.isnull().mean() * 100\n",
+        "print(\"Missing value percentage by column:\\n\", missing_percent)\n",
+        "\n",
+        "# Drop rows with missing log_price (target)\n",
+        "df = df[df['log_price'] > 0]\n",
+        "\n",
+        "# Drop rows with missing review_scores_rating (optional: can impute if modeling with it)\n",
+        "df = df.dropna(subset=['review_scores_rating'])\n",
+        "\n",
+        "# Fill numerical missing values with median (robust to outliers)\n",
+        "for col in ['bathrooms', 'bedrooms', 'beds', 'accommodates']:\n",
+        "    if col in df.columns:\n",
+        "        df[col] = df[col].fillna(df[col].median())\n",
+        "\n",
+        "# Fill cleaning_fee with mode\n",
+        "if 'cleaning_fee' in df.columns:\n",
+        "    df['cleaning_fee'] = df['cleaning_fee'].fillna(df['cleaning_fee'].mode()[0])\n",
+        "\n",
+        "# Fill room_type and cancellation_policy with mode (few missing)\n",
+        "for col in ['room_type', 'cancellation_policy']:\n",
+        "    df[col] = df[col].fillna(df[col].mode()[0])\n",
+        "\n",
+        "# 2. Fix invalid zeros (log_price already handled above)\n",
+        "for col in ['bedrooms', 'beds', 'bathrooms', 'accommodates']:\n",
+        "    df = df[df[col] > 0]\n",
+        "\n",
+        "# 3. Convert categorical columns to binary if needed\n",
+        "# Example: Convert cleaning_fee and instant_bookable to 0/1\n",
+        "df['cleaning_fee'] = df['cleaning_fee'].map({'True': 1, 'False': 0, True: 1, False: 0})\n",
+        "df['instant_bookable'] = df['instant_bookable'].map({'t': 1, 'f': 0})\n",
+        "\n",
+        "# 4. Final structure check\n",
+        "print(\"Final dataset shape:\", df.shape)\n",
+        "print(\"\\nAny remaining missing values:\")\n",
+        "print(df.isnull().sum())"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Observations – Data Preprocessing\n",
+        "\n",
+        "\n",
+        "*  Removed records with missing or zero log_price\n",
+        "These records were dropped because log_price is the target variable. Missing or zero values would prevent the model from learning accurate price predictions.\n",
+        "\n",
+        "*  Dropped rows with missing review_scores_rating\n",
+        "This feature is subjective and difficult to impute meaningfully. Keeping only complete records ensures that any sentiment-based modeling is based on real user feedback.\n",
+        "\n",
+        "*   Imputed missing values in numeric columns using median\n",
+        "Columns like bathrooms, bedrooms, beds, and accommodates had some missing values. Median was used instead of mean to avoid the influence of outliers and ensure stable imputation.\n",
+        "\n",
+        "*  Filled missing values in categorical columns using mode\n",
+        "cleaning_fee, room_type, and cancellation_policy had very few missing values. These were filled using the most frequent category (mode) to retain dominant trends in the data.\n",
+        "\n",
+        "\n",
+        "*  Removed listings with invalid zeros in numeric columns\n",
+        "Listings with 0 values in bedrooms, bathrooms, beds, and unrealistic accommodates values (≤1) were removed. These are either data errors or not viable listings, and would distort learning.\n",
+        "\n",
+        "\n",
+        "*  \t•\tConverted binary categorical variables to numeric format a) cleaning_fee was mapped to 1/0 from True/False b) instant_bookable was mapped to 1/0 from t/f\n",
+        "These conversions were necessary for model compatibility and follow standard preprocessing practice.\n",
+        "Final structure checked\n",
+        "\n",
+        "*  After preprocessing, the dataset contains no missing or invalid values, and all features are in a consistent format suitable for modeling.\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "9175RwmaTT0n"
+      }
     },
     {
       "cell_type": "markdown",
@@ -7580,8 +7682,7 @@
         "HeUzI1OB4rqM",
         "jvoU3F6oMKti",
         "2BkZh6eHluZK"
-      ],
-      "include_colab_link": true
+      ]
     },
     "kernelspec": {
       "display_name": "Python 3 (ipykernel)",
